Updated import to pull PCoABase from mod

--- a/ipynb/PCoA method benchmarking.ipynb
+++ b/ipynb/PCoA method benchmarking.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:bebef3cf76a6370987290255364ce3c8127cddf65b20857e2a7b64b0cf954766"
+  "signature": "sha256:4be895dbd3d728ed4bbdb7d8f535024a3666a46af60b55bf546ec5b7b716a26b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -37,7 +37,9 @@
       "import scipy as sp\n",
       "import scipy.sparse\n",
       "import scipy.sparse.linalg\n",
-      "from skbio.stats.ordination import PCoABase, OrdinationResults\n",
+      "from skbio.stats.ordination import OrdinationResults\n",
+      "\n",
+      "from mod.principal_coordinate_analysis import PCoABase\n",
       "\n",
       "class DecompTests(TestCase):\n",
       "    def setUp(self):\n",
@@ -229,10 +231,60 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def fsvd(A, **kwargs):\n",
-      "    raise NotImplementedError\n",
-      "\n",
+      "def fsvd(A, k=10, i=1, usePowerMethod=0, **kwargs):    \n",
+      "    \"\"\"takes an F-matrix and returns eigenvalues and eigenvectors of the ssvd method\n",
+      "    Based on algorithm described in 'An Algorithm for the Principal Component analysis\n",
+      "    of Large Data Sets' by N. Halko, P.G. Martinsson, Y. Shkolnisky, and M. Tygert\n",
+      "    and Matlab code: http://stats.stackexchange.com/questions/2806/best-pca-algorithm-for-huge-number-of-features\n",
       "    \n",
+      "    F_matrix: F_matrix\n",
+      "    k: dimensions\n",
+      "    i: is the number of levels of the Krylov method to use, for most applications, i=1 or i=2 is sufficient\n",
+      "    userPowerMethod: changes the power of the spectral norm (minimizing the error). See p11/eq8.1 DOI = {10.1137/100804139}  \n",
+      "    \"\"\"\n",
+      "    m, n = A.shape\n",
+      "    \n",
+      "    if m < n:\n",
+      "        A = A.T\n",
+      "    \n",
+      "    m, n = A.shape    #dimensions could have changed in above Transpose\n",
+      "    l = k + 2\n",
+      "\n",
+      "    # entries independent, identically distributed Gaussian random variables of zero mean and unit variance\n",
+      "    G = np.random.standard_normal(size=(n, l))   \n",
+      "    if usePowerMethod == 1:\n",
+      "        H = np.dot(A, G)\n",
+      "        for x in xrange(i):\n",
+      "            H = dot(A, np.dot(A.T, H))   #enhance decay of singular values\n",
+      "    else:\n",
+      "        H = np.dot(A, G)\n",
+      "        tmp = np.dot(A, np.dot(A.T, H))\n",
+      "        H = np.hstack((H, np.dot(A, np.dot(A.T, H))))\n",
+      "        for x in xrange(i-1):\n",
+      "            H = hstack((H, np.dot(A, np.dot(A.T, tmp)))) ### tmp is currently undefined, inquiring\n",
+      "    \n",
+      "    Q, R = np.linalg.qr(H)    #pivoted QR-decomposition\n",
+      "    T = np.dot(A.T, Q) #step 3\n",
+      "    \n",
+      "    Vt, St, W = np.linalg.svd(T, full_matrices=False) #step 4 (as documented in paper)\n",
+      "    W = W.T\n",
+      "    \n",
+      "    Ut = np.dot(Q,W)\n",
+      "\n",
+      "    if m < n:\n",
+      "        V_fsvd = Ut[:,:k]\n",
+      "        U_fsvd = Vt[:,:k]\n",
+      "    else:\n",
+      "        U_fsvd = Ut[:,:k]\n",
+      "        V_fsvd = Vt[:,:k]\n",
+      "    \n",
+      "    #drop imaginary component, if we got one\n",
+      "    eigvals = (St[:k]**2).real\n",
+      "    eigvecs = U_fsvd.real\n",
+      "\n",
+      "    return eigvals, eigvecs.T\n",
+      "\n",
+      "\n",
       "class FSVDTests(DecompTests):\n",
       "    def test_fsvd(self):\n",
       "        self.fail()"
